# map-merge

./: LICENSE  README.md
map_merge_3d/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosdoc.yaml
map_merge_3d/doc/: architecture.dia  mainpage.dox  wiki.txt
map_merge_3d/include/map_merge_3d/: dispatch.h  enum.h  features.h  graph.h  map_merge_node.h  map_merging.h  matching.h  typedefs.h  visualise.h
map_merge_3d/launch/: from_pcds.launch  map_merge.launch
map_merge_3d/src/: dispatch_descriptors.h  features.cpp  graph.cpp  map_merge_node.cpp  map_merge_tool.cpp  map_merging.cpp  matching.cpp  registration_visualisation.cpp  visualise.cpp  visualise.h
map_merge_3d/test/: test_map_merging.cpp
