<?xml version="1.0"?>
<package format="2">
  <name>map_merge_3d</name>
  <version>0.0.0</version>
  <description>The map_merge_3d package</description>

  <author email="laeqten@gmail.com">Jiri Horner</author>
  <maintainer email="laeqten@gmail.com">Jiri Horner</maintainer>

  <license>BSD</license>
  <!-- TODO -->
  <!-- <url type="website">http://wiki.ros.org/map_merge_3d</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>pcl_ros</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>roslaunch</test_depend>
</package>
